--- a/Style.css
+++ b/Style.css
@@ -17,6 +17,8 @@ html,body{
 }
 
 #title{
+    margin: 0px;
+    pading: 3px;
     font-family: 'Oswald', cursive;
     font-size: 3.5rem;
 }
@@ -25,9 +27,10 @@ html,body{
     width: 75%;
     min-width: 1300px;
     height: 90%;
+    min-height: ;
     flex-direction: column;
     background-color: #E8E8E8;
-    justify-content: space-around;
+    justify-content: center;
     border-radius: 10px;
 }
 
@@ -45,6 +48,7 @@ svg{
 
 #info{
    align-self: flex-end;
+    margin: 10px;
     margin-right: 10%;
     font-family: 'Oswald',sans-serif;
     
@@ -74,4 +78,17 @@ svg{
 
 #x-axis, #y-axis{
     font-family: 'Oswald', sans-serif;
+}
+
+@media only screen and (max-width: 768px){
+    #container{
+        width: 1300px;
+        height: 900px;
+    }
+    
+}@media only screen and (max-height: 768px){
+    #container{
+        width: 1300px;
+        height: 900px;
+    }
 }
